--- a/verdant/index.html
+++ b/verdant/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Verdant</title>
   </head>
-  <body>
+  <body class="selection:bg-emerald-800 selection:text-amber-50">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
