--- a/verdant/index.html
+++ b/verdant/index.html
@@ -8,6 +8,8 @@
   </head>
   <body class="selection:bg-emerald-800 selection:text-amber-50">
     <div id="root"></div>
+        <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
